--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.7",
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
+    "motion": "^12.29.2",
+    "nextstepjs": "^2.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
